Configure unique release token for workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -112,7 +112,7 @@ jobs:
           # Send the release to Foundry VTT
           curl -X POST \
             -H "Content-Type: application/json" \
-            -H "Authorization: ${{ secrets.FOUNDRY_API_KEY }}" \
+            -H "Authorization: ${{ secrets.BG3_HUD_DND5E_RELEASE_TOKEN }}" \
             -d "$payload" \
             https://api.foundryvtt.com/_api/packages/release_version/
         env:
